# EpubAITranslator

./: build.ps1  config.toml  main.py  pyproject.toml
src/epub_translator/: app.py  constants.py  model_registry.py  settings.py
src/epub_translator/core/: epub_processor.py  language.py  model_loader.py  translator.py
src/epub_translator/ui/: main_window.py
src/epub_translator/ui/dialogs/: preview_dialog.py
src/epub_translator/ui/tabs/: config_tab.py  model_tab.py  translation_tab.py
src/epub_translator/ui/widgets/: model_browser.py  tooltip.py
