[project]
name = "epub-ai-translator"
version = "0.2.0"
description = "Yerel AI modelleriyle İngilizce → Türkçe EPUB çevirisi yapan masaüstü uygulaması."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "sacremoses>=0.1.1",
    "beautifulsoup4>=4.12.0",
    "customtkinter>=5.2.0",
    "huggingface-hub>=0.23.0",
    "langdetect>=1.0.9",
    "accelerate>=1.13.0",
    "psutil>=5.9.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
epub-translator = "epub_translator.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epub_translator"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
